# jester

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: erased_ptr.hpp  stda.hpp
include/cfr/: cfr_engine.hpp  cfr_entry.hpp  cfr_infoset.hpp  cfr_table.hpp  redis_cfr_table.hpp  unordered_cfr_table.hpp
include/game/: card.hpp  game_state.hpp  game_view.hpp
include/jester/cfr/: cfr_distribution.hpp  cfr_engine.hpp  cfr_table.hpp  redis_cfr_table.hpp  unordered_cfr_table.hpp
include/jester/game/: game_engine.hpp
include/jester/mcts/: mcts_stats.hpp
include/jester/players/: cfr_player.hpp  minimal_player.hpp
include/jester/utils/: logging.hpp
include/mccfr/: mccfr_engine.hpp  mccfr_entry.hpp  mccfr_table.hpp
include/mcts/: ismcts_tree.hpp  mcts_node.hpp
include/observers/: omniscient_observer.hpp  reduced_observer.hpp
include/players/: cfr_player.hpp  greedy_player.hpp  player.hpp  random_player.hpp
src/: card.cpp  card.hpp  constants.hpp  game.cpp  game.hpp  main.cpp  minimal_player.cpp  minimal_player.hpp  player.hpp  printing.hpp  random_player.cpp  random_player.hpp
src/cfr/: cfr_distribution.cpp  cfr_engine.cpp  cfr_entry.cpp  cfr_infoset.cpp  cfr_table.cpp  redis_cfr_table.cpp  unordered_cfr_table.cpp
src/cfrm/: cfrm_abstraction.cpp  cfrm_abstraction.hpp  cfrm_environment.cpp  cfrm_environment.hpp  cfrm_key.cpp  cfrm_key.hpp  cfrm_learner.cpp  cfrm_learner.hpp  cfrm_node.cpp  cfrm_node.hpp  cfrm_stats.cpp  cfrm_stats.hpp  cfrm_storage.cpp  cfrm_storage.hpp  cfrm_table.cpp  cfrm_table.hpp  cfrm_tables.cpp  cfrm_tables.hpp  compressed_view.cpp  compressed_view.hpp  tabular_cfrm.cpp  tabular_cfrm.hpp
src/durak/: card.hpp  game.cpp  game.hpp  game_view.cpp  game_view.hpp
src/engine/: game_engine.cpp  game_engine.hpp
src/game/: card.cpp  game_engine.cpp  game_state.cpp  game_view.cpp
src/jester/cfr/: cfr_distribution.cpp  cfr_engine.cpp  cfr_infoset.cpp  redis_cfr_table.cpp  unordered_cfr_table.cpp
src/jester/game/: card.cpp  game_engine.cpp  game_state.cpp  game_view.cpp
src/jester/mcts/: dmcts_tree.cpp  ismcts_tree.cpp  mcts_node.cpp  mcts_stats.cpp
src/jester/observers/: omniscient_observer.cpp  reduced_observer.cpp
src/jester/players/: cfr_player.cpp  dmcts_player.cpp  greedy_player.cpp  human_player.cpp  ismcts_player.cpp  minimal_player.cpp  random_player.cpp
src/mccfr/: mccfr_engine.cpp  mccfr_entry.cpp  mccfr_entry.hpp  mccfr_infoset.cpp  mccfr_infoset.hpp  mccfr_table.cpp  mccfr_table.hpp
src/mcts/: dmcts_node.cpp  dmcts_node.hpp  dmcts_tree.cpp  dmcts_tree.hpp  ismcts_node.cpp  ismcts_node.hpp  ismcts_tree.cpp  ismcts_tree.hpp  mcts_node.cpp  mcts_node.hpp  mcts_stats.cpp  mcts_tree.cpp  mcts_tree.hpp
src/observers/: observer.hpp  omniscient_observer.cpp  omniscient_observer.hpp  reduced_observer.cpp  reduced_observer.hpp  stream_observer.cpp  stream_observer.hpp
src/players/: cfr_player.cpp  cfrm_player.cpp  cfrm_player.hpp  dmcts_player.cpp  dmcts_player.hpp  greedy_player.cpp  greedy_player.hpp  human_player.cpp  human_player.hpp  ismcts_player.cpp  ismcts_player.hpp  mccfr_player.cpp  mccfr_player.hpp  minimal_player.cpp  minimal_player.hpp  player.hpp  random_player.cpp  random_player.hpp
src/rules/: card.cpp  card.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  game_view.cpp  game_view.hpp  player.hpp
test/: main.cpp  test_card.cpp  test_cfr.cpp  test_cfrm.cpp  test_cfrm_table.cpp  test_game_state.cpp  test_game_view.cpp  test_mccfr.cpp  test_players.cpp
